--- a/src/app/styles/Navbar.module.css
+++ b/src/app/styles/Navbar.module.css
@@ -1,35 +1,58 @@
 .navbar {
   display: flex;
+  flex-direction: row;
   position: fixed;
+  text-wrap: nowrap;
   width: 100vw;
-  justify-content:first baseline;
+  justify-content:space-between;
   align-items: center;
   padding: 20px;
   background-color: var(--white);
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 6px rgb(43, 40, 40);
   box-sizing: border-box;
   z-index: 1000;
+ 
   
   
+  
+} 
+
+.gap{
+  margin-right: 50px;
+  
+  display: flex;
+  
+
+}
+.menuClosed{
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  
+
 }
 
 .menuItem:hover {
   color: var(--primary-color);
+
 }
 
 .darkModeToggle {
   background: none;
-  
+  display: flex;
   border: none;
   cursor: pointer;
   font-size: 16px;
-  margin-left: 20px;
   color: var(--text-dark);
   transition: color 0.3s ease;
+  z-index: 1000;
 }
 
 .darkModeToggle:hover {
   color: var(--primary-color);
+
 }
 
 .navbar {
@@ -45,54 +68,56 @@
 /* Dark Mode Styles */
 .dark {
   /* background-color: var(--background-dark); */
-  background-color: rgba(255, 255, 255, 0.12);
+  background-color: rgb(43, 40, 40);
   color: var(--text-light);
+  box-shadow: 0 4px 6px rgb(104, 100, 100);
 }
 .dark .menuOpen {
   background-color: var(--background-dark);
 }
 .logo {
   display: flex;
-
  
   font-size: 24px;
   font-weight: bold;
 }
 
-.menu {
+/* .menu {
   display: flex;
 
   gap: 20px;
-}
+} */
 
 .menuOpen {
   position: fixed;
-  display: flex;
+  display: none;
   top: 0;
   right: 0;
   bottom: 10;
   height: 100vh;
   width: 200px;
+  gap: 20px;
   background-color: var(--primary);
   flex-direction: column;
   align-items: center;
   justify-content: center;
   transform: translateX(0);
   transition: transform 0.3s ease-in-out;
-  z-index: 1000;
+  z-index: -1;
   overflow: hidden;
 }
 
 .menuClosed {
   display: flex;
   align-items: center;
+  justify-content: center;
   transform: translateX(100%);
   transition: transform 0.3s ease-in-out;
 }
 
 .menuItem {
   display: flex;
-  font-size: 18px;
+  font-size: 20px;
   cursor: pointer;
 }
 
@@ -100,11 +125,9 @@
   color: var(--white);
 }
 @media (max-width: 768px) {
-  .menu {
-    display: none; /* Hide menu on mobile */
-  }
+
   .menuOpen {
-    display: flex; /* Show full-screen menu on mobile */
+    display: flex;; /* Show full-screen menu on mobile */
 
   }
   .menuClosed{
@@ -112,6 +135,8 @@
   }
   .navbar{
     justify-content: space-between;
+    padding: 20px;
+    
   }
 }
 
@@ -130,4 +155,9 @@
   }
 
  
+}
+
+
+.mc{
+  display: none;;
 }
