--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -13,9 +13,7 @@ body {
   font-family: 'Arial', sans-serif;
 }
 
-* {
-  box-sizing: inherit;
-}
+
 
 a {
   text-decoration: none;
@@ -43,11 +41,22 @@ html {
 :root {
   --background-color: #ffffff;
   --text-color: #000000;
+  --bg-home:white;
+  --text-home: #333;
+  --bg-about:var(--light-gray);
+  --about-text:var(--black);
+  --project-shadow:rgba(0, 0, 0, 0.1);
 }
 
 [data-theme="dark"] {
   --background-color: #121212;
   --text-color: #ffffff;
+  --bg-home:black;
+  --text-home:white;
+  --bg-about:rgb(20, 19, 19);
+  --about-text:grey;
+  --project-shadow:rgb(104, 100, 100);
+
 }
 
 body {
