--- a/src/app/styles/Home.module.css
+++ b/src/app/styles/Home.module.css
@@ -45,7 +45,7 @@
 }
 
 .dynamicText {
-  transition: opacity 0.9s ease-in-out;
+  transition: opacity 0.5s ease-in-out;
   animation: fadeInOut 2s ease-in-out infinite;
 }
 
@@ -84,6 +84,7 @@
   background-color: transparent;
   color: var(--text-home);
   text-decoration: none;
+  box-shadow: 0 4px 10px rgba(240, 154, 228, 0.857);
   border: 2px solid var(--secondary-color);
   border-radius: 5px;
   transition: background-color 0.4s ease, color 0.4s ease, transform 0.4s ease;
@@ -107,6 +108,7 @@
 
   .buttonsWrapper {
     flex-direction: column;
+    align-items: center;
   }
 
   .primaryButton, .secondaryButton {
