--- a/src/app/styles/Navbar.module.css
+++ b/src/app/styles/Navbar.module.css
@@ -10,7 +10,7 @@
   background-color: var(--white);
   box-shadow: 0 4px 6px rgb(43, 40, 40);
   box-sizing: border-box;
-  z-index: 1000;
+  z-index: 2000;
   flex:1 1 50%;
   white-space: nowrap;
   
@@ -89,28 +89,28 @@
   font-weight: bold;
 }
 
-/* .menu {
-  display: flex;
 
-  gap: 20px;
-} */
 
 .menuOpen {
   position: fixed;
   display: none;
-  top: 0;
+  
+  top: 7.5vh;
+
   right: 0;
   bottom: 10;
   height: 100vh;
   width: 200px;
-  gap: 20px;
   background-color: var(--primary);
   flex-direction: column;
   align-items: center;
+  gap: 20px;
   justify-content: center;
-  transform: translateX(0);
+  transform: translateX(10%);
   transition: transform 0.3s ease-in-out;
-  z-index: -1;
+
+  
+  z-index: -500;
   overflow: hidden;
 }
 
@@ -119,14 +119,13 @@
   align-items: center;
   justify-content: center;
   transform: translateX(100%);
-  transition: transform 0.3s ease-in-out;
+  transition: opacity 0.3s ease, transform 0.3s ease-in-out;
 }
 
 .menuItem {
   display: flex;
   font-size: 22px;
   cursor: pointer;
-  flex:1 1 auto;
   white-space:nowrap;
   
 }
@@ -147,6 +146,9 @@
     justify-content: space-between;
     padding: 20px;
     
+  }
+  .menuItem{
+    border-bottom: 1px solid var(--background-light);
   }
 }
 
