--- a/src/app/styles/Home.module.css
+++ b/src/app/styles/Home.module.css
@@ -56,13 +56,19 @@
 
 .buttonsWrapper {
   display: flex;
+  width: 100%;
   justify-content: center;
+
   gap: 20px;
   margin-top: 30px;
+  
+  
 }
 
 .primaryButton {
   padding: 15px 30px;
+  display: flex;
+  justify-content: center;
   background-color: transparent;
   color: var(--text-home);
   text-decoration: none;
@@ -80,6 +86,8 @@
 }
 
 .secondaryButton {
+  display: flex;
+  justify-content: center;
   padding: 15px 30px;
   background-color: transparent;
   color: var(--text-home);
@@ -109,10 +117,12 @@
   .buttonsWrapper {
     flex-direction: column;
     align-items: center;
+    width: 100%;
   }
 
-  .primaryButton, .secondaryButton {
-    width: 100%;
-    text-align: center;
-  }
-}
+
+.primaryButton, .secondaryButton {
+  width: 100%; /* Make buttons full width */
+  text-align: center;
+  padding: 15px 0; /* Adjust padding to ensure buttons look good on small screens */
+}}
