--- a/src/app/styles/Home.module.css
+++ b/src/app/styles/Home.module.css
@@ -14,6 +14,7 @@
   background-color: var(--bg-home);
   color: var(--text-home);
   padding: 60px 20px;
+  box-sizing: border-box;
 }
 
 .container {
@@ -30,6 +31,7 @@
 
 .introText {
   font-size: 48px;
+  font-weight: 800;
   margin: 0;
   color: var(--primary-color);
 }
@@ -39,7 +41,7 @@
 }
 
 .roleText {
-  font-size: 28px;
+  font-size: 24px;
   margin: 20px 0;
   color: var(--text-home);
 }
@@ -47,11 +49,17 @@
 .dynamicText {
   transition: opacity 0.5s ease-in-out;
   animation: fadeInOut 2s ease-in-out infinite;
+  animation-delay: 0.5s;
 }
 
 @keyframes fadeInOut {
-  0%, 100% { opacity: 0; }
-  50% { opacity: 1; }
+  0%,
+  100% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
 }
 
 .buttonsWrapper {
@@ -60,9 +68,7 @@
   justify-content: center;
 
   gap: 20px;
-  margin-top: 30px;
-  
-  
+  margin-top: 48px;
 }
 
 .primaryButton {
@@ -74,7 +80,9 @@
   text-decoration: none;
   border-radius: 5px;
   box-shadow: 0 4px 10px rgba(0, 112, 243, 0.3);
-  transition: background-color 0.3s ease, transform 0.3s ease;
+  transition:
+    background-color 0.3s ease,
+    transform 0.3s ease;
   border: 2px solid var(--primary-color);
   border-radius: 5px;
 }
@@ -95,7 +103,10 @@
   box-shadow: 0 4px 10px rgba(240, 154, 228, 0.857);
   border: 2px solid var(--secondary-color);
   border-radius: 5px;
-  transition: background-color 0.4s ease, color 0.4s ease, transform 0.4s ease;
+  transition:
+    background-color 0.4s ease,
+    color 0.4s ease,
+    transform 0.4s ease;
 }
 
 .secondaryButton:hover {
@@ -104,14 +115,24 @@
   transform: translateY(-3px);
 }
 
+.hi {
+  display: block;
+  font-size: 36px;
+  font-weight: 600;
+}
+
 /* Media Queries */
 @media (max-width: 768px) {
+  .hi {
+    font-size: 28px;
+  }
+
   .introText {
     font-size: 36px;
   }
 
   .roleText {
-    font-size: 24px;
+    font-size: 20px;
   }
 
   .buttonsWrapper {
@@ -120,9 +141,10 @@
     width: 100%;
   }
 
-
-.primaryButton, .secondaryButton {
-  width: 100%; /* Make buttons full width */
-  text-align: center;
-  padding: 15px 0; /* Adjust padding to ensure buttons look good on small screens */
-}}
+  .primaryButton,
+  .secondaryButton {
+    width: 100%; /* Make buttons full width */
+    text-align: center;
+    padding: 15px 0; /* Adjust padding to ensure buttons look good on small screens */
+  }
+}
