--- a/src/app/styles/Navbar.module.css
+++ b/src/app/styles/Navbar.module.css
@@ -1,48 +1,30 @@
 .navbar {
+  position: fixed;
+  width: 100vw;
+
   display: flex;
   flex-direction: row;
-  position: fixed;
-  text-wrap: nowrap;
-  width: 100vw;
-  justify-content:space-between;
   align-items: center;
+  justify-content: space-between;
+
   padding: 20px;
+
   background-color: var(--white);
-  box-shadow: 0 4px 6px rgb(43, 40, 40);
+  /* box-shadow: 0 4px 6px rgb(43, 40, 40); */
   box-sizing: border-box;
   z-index: 2000;
-  flex:1 1 50%;
-  white-space: nowrap;
-  
-  
-  
-  
-} 
-
-.navbar label:nth-child(2) {  /*label with input type="number"*/
-  flex:0 0 10%;
 }
 
-.gap{
-  margin-right: 90px;
-  
+.menuClosed {
   display: flex;
-
-
-}
-.menuClosed{
-  display: flex;
-  gap: 20px;
-  justify-content: center;
   align-items: center;
-  z-index: 1000;
-  width:5em;
 
+  z-index: 1000;
+  gap: 28px;
 }
 
 .menuItem:hover {
   color: var(--primary-color);
-
 }
 
 .darkModeToggle {
@@ -54,12 +36,11 @@
   color: var(--text-dark);
   transition: color 0.3s ease;
   z-index: 1000;
-  white-space:nowrap;
+  white-space: nowrap;
 }
 
 .darkModeToggle:hover {
   color: var(--primary-color);
-
 }
 
 .navbar {
@@ -75,26 +56,22 @@
 /* Dark Mode Styles */
 .dark {
   /* background-color: var(--background-dark); */
-  background-color: rgb(43, 40, 40);
+  background-color: #000;
   color: var(--text-light);
-  box-shadow: 0 4px 6px rgb(104, 100, 100);
+  /* box-shadow: 0 4px 6px rgb(104, 100, 100); */
 }
 .dark .menuOpen {
   background-color: var(--background-dark);
 }
 .logo {
-  display: flex;
- 
-  font-size: 24px;
+  font-size: 16px;
   font-weight: bold;
 }
-
-
 
 .menuOpen {
   position: fixed;
   display: none;
-  
+
   top: 7.5vh;
 
   right: 0;
@@ -104,72 +81,61 @@
   background-color: var(--primary);
   flex-direction: column;
   align-items: center;
-  gap: 20px;
+  gap: 32px;
   justify-content: center;
   transform: translateX(10%);
   transition: transform 0.3s ease-in-out;
 
-  
   z-index: -500;
   overflow: hidden;
 }
 
-.menuClosed {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transform: translateX(100%);
-  transition: opacity 0.3s ease, transform 0.3s ease-in-out;
-}
-
 .menuItem {
   display: flex;
-  font-size: 22px;
+  font-size: 16px;
   cursor: pointer;
-  white-space:nowrap;
-  
+  white-space: nowrap;
 }
 
 .menuItemMobile {
   color: var(--white);
 }
 @media (max-width: 768px) {
-
   .menuOpen {
-    display: flex;; /* Show full-screen menu on mobile */
-
+    display: flex; /* Show full-screen menu on mobile */
   }
-  .menuClosed{
+  .menuClosed {
     display: none;
   }
-  .navbar{
+  .navbar {
     justify-content: space-between;
     padding: 20px;
-    
   }
-  .menuItem{
+  .menuItem {
     border-bottom: 1px solid var(--background-light);
+  }
+
+  .menuItem {
+    display: flex;
+    font-size: 18px;
+    cursor: pointer;
+    white-space: nowrap;
   }
 }
 
 @media (min-width: 769px) {
-
-  
-  .menu{
+  .menu {
     display: flex;
   }
   .menuOpen {
     display: none; /* Hide full-screen menu on desktop */
   }
 
-  .menuClosed{
+  .menuClosed {
     display: flex;
   }
-
- 
 }
 
-
-.mc{
-  display: none;;
+.mc {
+  display: none;
 }
