--- a/src/app/styles/Navbar.module.css
+++ b/src/app/styles/Navbar.module.css
@@ -9,7 +9,9 @@
 
   padding: 20px;
 
-  background-color: var(--white);
+  /* background-color: var(--white); */
+  background: transparent;
+  backdrop-filter: blur(5px);
   /* box-shadow: 0 4px 6px rgb(43, 40, 40); */
   box-sizing: border-box;
   z-index: 2000;
@@ -56,7 +58,7 @@
 /* Dark Mode Styles */
 .dark {
   /* background-color: var(--background-dark); */
-  background-color: #000;
+  /* background-color: #000; */
   color: var(--text-light);
   /* box-shadow: 0 4px 6px rgb(104, 100, 100); */
 }
@@ -64,8 +66,8 @@
   background-color: var(--background-dark);
 }
 .logo {
-  font-size: 16px;
-  font-weight: bold;
+  font-size: 18px;
+  font-weight: 800;
 }
 
 .menuOpen {
@@ -138,4 +140,15 @@
 
 .mc {
   display: none;
+}
+
+.menuItem {
+  font-family:
+    League Spartan,
+    Helvetica,
+    Arial,
+    sans-serif;
+  font-weight: 450;
+  background-color: transparent;
+  font-size: 18px;
 }
