Added Better Sidebar

--- a/src/app/styles/Navbar.module.css
+++ b/src/app/styles/Navbar.module.css
@@ -103,8 +103,8 @@
   color: var(--white);
 }
 @media (max-width: 768px) {
-  .menuOpen {
-    display: flex; /* Show full-screen menu on mobile */
+  /* .menuOpen {
+    display: flex; 
   }
   .menuClosed {
     display: none;
@@ -122,6 +122,9 @@
     font-size: 18px;
     cursor: pointer;
     white-space: nowrap;
+  } */
+  .navbar {
+    display: none;
   }
 }
 
